<resources>
    <string name="app_name">tvapk-chromium119</string>
    <string name="action_refresh">刷新</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="kiosk_settings_title">展示设置</string>
    <string name="kiosk_settings_url">页面地址</string>
    <string name="kiosk_settings_zoom">页面缩放</string>
    <string name="kiosk_kernel_title">内核信息</string>
    <string name="kiosk_settings_restore_default">恢复默认</string>
    <string name="kiosk_settings_cancel">取消</string>
    <string name="kiosk_settings_save">保存</string>
    <string name="kiosk_settings_exit">退出应用</string>
</resources>
